First implementation of plugins
